--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   shared_preferences: ^2.3.5
   dio: ^5.7.0
   flutter_dotenv: ^5.2.1
+  get_it: ^8.0.3
 
 dev_dependencies:
   flutter_test:
